...
    <string name="sort_by_opened_asc">Opened Asc</string>
    <string name="sort_by_opened_desc">Opened Desc</string>
    <string name="pref_tts_title">TTS Language</string>

    <string name="app_name"></string>
    <string name="app_title" translatable="false">Pellego</string>
    <string name="title_library" translatable="false">Library</string>
    <string name="title_empty_library" translatable="false">Such empty..</string>
    <string name="title_learn_nav">Learn</string>
    <string name="title_learn">Learning Modules</string>
    <string name="title_progress">Progress</string>
    <string name="title_terms_and_conditions">Terms and Conditions</string>
    <string name="title_privacy_policy" translatable="false">Privacy Policy</string>
    <string name="title_settings">Settings</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_quiz_results">Results</string>
    <string name="title_clump_reading" translatable="false">Clump Reading</string>
    <string name="short_description_clump_reading" translatable="false">Words grouped together in chunks</string>
    <string name="title_meta_guiding">Meta Guiding</string>
    <string name="title_technique">Technique Overview</string>
    <string name="title_reducing_subvocalization" translatable="false">Reducing Subvocalization</string>
    <string name="short_description_reducing_subvocalization" translatable="false">Eliminate the habit of subvocalization</string>
    <string name="title_profile">Profile</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="submodule_popup_dialog">Read the words as they are displayed on the screen. After all the
        words have been displayed, you will be tested on your comprehension. Good luck!</string>
    <string name="clumpreading_popup_dialog">Read the words as they are displayed on the screen. Try to keep your eye focused on the center word!</string>
...
    </string-array>
    <string-array name="text_sizes_entries">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>
    <string name="title_progress_reports">Progress Reports</string>
    <string name="title_text_size">Text size</string>
    <string name="description_text_size">The default text size displayed in the reader</string>
    <string name="default_text_size">medium</string>
    <string name="title_wpm">WPM</string>
    <string name="title_words_read">Words Read</string>
    <string name="description_wpm">The default wpm used in the reader</string>
...
