<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_library">

    <fragment
        android:id="@+id/nav_library"
        android:name="com.example.pellego.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/nav_learn"
        android:name="com.example.pellego.ui.learn.LearnFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_learn" />

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.pellego.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress"
    />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.pellego.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_technique"
        android:name="com.example.pellego.ui.module.overview.ModuleOverviewFragment"
        android:label="@string/title_technique"
        tools:layout="@layout/fragment_terms_and_conditions" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.pellego.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_terms_and_conditions"
        android:name="com.example.pellego.ui.termsAndConditions.TermsAndConditionsFragment"
        android:label="@string/title_terms_and_conditions"
        tools:layout="@layout/fragment_terms_and_conditions" />

    <fragment
        android:id="@+id/nav_module_overview"
        android:name="com.example.pellego.ui.module.overview.ModuleOverviewFragment"
        android:label="@string/title_technique"
        tools:layout="@layout/fragment_module_overview"
        />

    <fragment
        android:id="@+id/nav_rsvp_intro"
        android:name="com.example.pellego.ui.module.intro.ModuleIntroFragment"
        android:label="@string/title_rsvp_intro"
        tools:layout="@layout/fragment_module_intro" />

    <fragment
        android:id="@+id/nav_rsvp_module"
        android:name="com.example.pellego.ui.rsvp.RsvpModuleFragment"
        android:label="@string/title_rsvp"
        tools:layout="@layout/fragment_rsvp_module" />

    <fragment
        android:id="@+id/nav_metaguiding_intro"
        android:name="com.example.pellego.ui.module.intro.ModuleIntroFragment"
        android:label="@string/title_metaguiding_intro"
        tools:layout="@layout/fragment_module_intro" />

    <fragment
        android:id="@+id/nav_metaguiding_module"
        android:name="com.example.pellego.ui.metaguiding.MetaguidingModuleFragment"
        android:label="@string/title_meta_guiding"
        tools:layout="@layout/fragment_metaguiding_module" />

    <fragment
        android:id="@+id/nav_quiz"
        android:name="com.example.pellego.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/nav_quiz_results"
        android:name="com.example.pellego.ui.quiz.QuizResultFragment"
        android:label="@string/title_quiz_results"
        tools:layout="@layout/fragment_quiz_results" />

    <fragment
        android:id="@+id/nav_sign_out"
        android:name="com.example.pellego.ui.signout.SignOutFragment"
        android:label="@string/title_sign_out"
        tools:layout="@layout/fragment_sign_out" />

</navigation>