<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_submodule_overview"
    android:layout_below="@+id/bottom_nav_view"
    android:layout_above="@+id/text_learn"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    app:layout_constraintTop_toBottomOf="@+id/text_learn"
    app:layout_constraintBottom_toBottomOf="parent"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:layout_marginBottom="30dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@drawable/rounded_background"
    android:fitsSystemWindows="false"
    android:visibility="invisible">

    <ListView
        android:id="@+id/nav_module_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:background="?colorAccent" />

</com.google.android.material.navigation.NavigationView>
